@@ -113,9 +113,10 @@ CHANGELOG for Homebox for Drupal
   
 6.x-3.0-beta1 2011/02/17
   o Moved 6.x-2.x-dev branch to 6.x-3.x since 6.x-2.x-dev is not compatible with 6.x-2.1 release do to drupal.org redesign-related updates.
-  o by drumm: Fix equalizeColumnHeight() JS function, which fixes the block landing zones.
+  o #1063928 by drumm: Fix equalizeColumnHeight() JS function, which fixes the block landing zones.
 
 6.x-3.0-beta2 2011/02/17
   o by brianV: fix autosave
   
 6.x-3.x-dev xxxx/xx/xx
+  o by brianV: revert #1063928 to remove 100% width columns from the maximum-height check.
